# acc

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: default.yaml  risk_profiles.yaml
docs/: API_FLOW.md  ARCHITECTURE.md  DISCLAIMER.md  INSTALLER.md  PRIVACY.md  SCORING.md  TESTING.md  USER_MANUAL.md
dotnet/: .gitignore  Directory.Build.props  ProcAI.sln  README.md  build.ps1
dotnet/docs/: ARCHITECTURE.md  BUILD.md  INSTALLER.md  USER_MANUAL.md
dotnet/installer/: procai_installer.iss
dotnet/src/ProcAI.App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ProcAI.App.csproj  app.manifest
dotnet/src/ProcAI.App/Services/: AppServices.cs  UiHelpers.cs
dotnet/src/ProcAI.App/Views/: AlertsPage.xaml  AlertsPage.xaml.cs  AssistantPage.xaml  AssistantPage.xaml.cs  ConsentWindow.xaml  ConsentWindow.xaml.cs  DeepScanPage.xaml  (+15 more)
dotnet/src/ProcAI.Core/: ProcAI.Core.csproj
dotnet/src/ProcAI.Service/: MonitorWorker.cs  ProcAI.Service.csproj  Program.cs
dotnet/tests/ProcAI.Tests/: AuditLogTests.cs  BaselineTests.cs  DatabaseTests.cs  FeatureTests.cs  HybridTests.cs  ProcAI.Tests.csproj  RuleEngineTests.cs  SimulationTests.cs
installer/: build.py  procai.spec  procai_installer.iss  version_info.txt
scripts/: run_replay.py  run_scanner.py
src/accuscan/: __init__.py  app.py  config.py  constants.py  mathx.py  models.py  yaml_lite.py
src/accuscan/alerts/: __init__.py  alert_engine.py
src/accuscan/audit/: __init__.py  logger.py
src/accuscan/backtest/: __init__.py  metrics.py  replay_engine.py  synthetic.py
src/accuscan/console/: __init__.py  dashboard.py
src/accuscan/dashboard/: __init__.py  fastapi_server.py  server.py
src/accuscan/deterioration/: __init__.py  detectors.py  deterioration_detector.py
src/accuscan/execution/: __init__.py  demo_trader.py  modes.py  paper_trader.py  safeguards.py
src/accuscan/features/: __init__.py  digit_features.py  feature_engine.py  movement_features.py  windows.py
src/accuscan/health/: __init__.py  trade_health.py
src/accuscan/risk/: __init__.py  growth_governor.py  risk_profiles.py
src/accuscan/scanner/: __init__.py  market_scanner.py  symbol_registry.py
src/accuscan/scoring/: __init__.py  scoring_engine.py  weights.py
src/accuscan/stability/: __init__.py  stability_model.py
src/accuscan/storage/: __init__.py  db.py
src/accuscan/transport/: __init__.py  base.py  deriv_ws.py  mock_source.py
src/procai/: __init__.py  __main__.py  config.py
src/procai/assistant/: __init__.py  ai_backends.py  explain.py
src/procai/core/: __init__.py  baseline.py  engine.py  features.py  hybrid.py  ml.py  models.py  monitor.py  reputation.py  rules.py  simulation.py  telemetry.py
src/procai/data/: __init__.py  database.py  schema.sql
src/procai/gui/: __init__.py  app.py  consent.py  theme.py  widgets.py
src/procai/reports/: __init__.py  exporter.py
src/procai/service/: __init__.py  autostart.py  background.py  notifications.py  tray.py
src/procai/utils/: __init__.py  audit.py  logging_setup.py
tests/: __init__.py  conftest.py  test_audit.py  test_baseline.py  test_database.py  test_deterioration_execution.py  test_features.py  test_features_stability_scoring.py  test_hybrid.py  test_mathx_yaml_config.py  test_replay_dashboard.py  test_rules.py  test_simulation_and_engine.py
(+41 files in other folders)
