[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accuscan"
version = "0.1.0"
description = "Research-grade Deriv Accumulator market-selection, monitoring, alerting and paper/demo-trading intelligence system."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AccuScan" }]
keywords = ["deriv", "accumulator", "options", "trading", "quant", "research"]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "PyYAML>=6.0",
    "websockets>=12.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
]
ml = [
    "scikit-learn>=1.4",
]

[project.scripts]
accuscan = "accuscan.app:main"
accuscan-replay = "accuscan.backtest.replay_engine:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
