[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "procai"
version = "2.0.0"
description = "ProcAI - Real-time, AI-powered, defensive suspicious-process detection for Windows endpoints."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ProcAI Project" }]
keywords = ["endpoint-security", "edr", "process-monitoring", "anomaly-detection", "defensive-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]

# Runtime dependencies. The detection CORE (rules, baseline, hybrid, db) only needs
# the standard library + psutil. ML and GUI are optional extras so the engine can run
# headless on constrained machines.
dependencies = [
    "psutil>=5.9",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.3", "pandas>=2.0", "numpy>=1.24", "joblib>=1.3"]
gui = ["customtkinter>=5.2", "pystray>=0.19", "Pillow>=10.0"]
reports = ["reportlab>=4.0"]
ai = ["requests>=2.31"]
all = [
    "scikit-learn>=1.3", "pandas>=2.0", "numpy>=1.24", "joblib>=1.3",
    "customtkinter>=5.2", "pystray>=0.19", "Pillow>=10.0",
    "reportlab>=4.0", "requests>=2.31",
]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.1", "black>=23.0", "mypy>=1.5"]

[project.scripts]
procai = "procai.__main__:main"
procai-service = "procai.service.background:run_service_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
procai = ["data/schema.sql", "assets/*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
